--- a/todo/backend/package.json
+++ b/todo/backend/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "pg": "^8.13.1",
-    "pgtools": "^1.0.1"
+    "pgtools": "^1.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
