--- a/tanstack-plg/package.json
+++ b/tanstack-plg/package.json
@@ -13,7 +13,9 @@
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-query-devtools": "^5.62.8",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1"
   },
