--- a/angular-carversion/package.json
+++ b/angular-carversion/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wd18332",
+  "name": "angular-clothify",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -23,6 +23,7 @@
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-angular": "^0.522.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
