refactor: update Angular configuration, enhance styles, and improve home component layout
- Removed Bootstrap CSS and JS from angular.json.
- Added proxy configuration for development server.
- Introduced custom utility classes and animations in styles.scss.
- Updated app.component.html to include a footer component.
- Refactored app.component.ts to include FooterComponent.
- Enhanced customer review and dress style components with new HTML structure.
- Improved home.component.html layout with loading state, hero section, and new arrivals.
- Added newsletter subscription section with updated styling.
- Updated brand-row and product-card components for better presentation and functionality.

--- a/angular-carversion/angular.json
+++ b/angular-carversion/angular.json
@@ -25,10 +25,9 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -56,6 +55,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "buildTarget": "WD18332:build:production"
